--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "@haiix/seq": "^0.1.1",
+    "@haiix/tcomponent": "^0.2.6",
     "codemirror": "^5.65.1",
     "csslint": "^1.0.5",
     "jshint": "^2.13.4"
