--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@zip.js/zip.js": "^2.4.12",
     "codemirror": "^5.65.1",
     "csslint": "^1.0.5",
+    "encoding-japanese": "^2.0.0",
     "jshint": "^2.13.4"
   },
   "standard": {
