--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "codemirror": "^5.65.1",
     "csslint": "^1.0.5",
     "encoding-japanese": "^2.0.0",
-    "jshint": "^2.13.4"
+    "jshint": "^2.13.4",
+    "monaco-editor": "^0.35.0"
   },
   "standard": {
     "env": [
