--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "csslint": "^1.0.5",
     "encoding-japanese": "^2.0.0",
     "jshint": "^2.13.4",
-    "monaco-editor": "^0.35.0"
+    "monaco-editor-webpack-plugin": "^7.0.1"
   },
   "standard": {
     "env": [
