--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@haiix/seq": "^0.1.1",
     "@haiix/tcomponent": "^0.2.6",
     "@zip.js/zip.js": "^2.4.12",
-    "monaco-editor-webpack-plugin": "^7.0.1"
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "typescript": "^5.1.3"
   },
   "standard": {
     "env": [
