--- a/package.json
+++ b/package.json
@@ -7,20 +7,22 @@
   "author": "haiix",
   "license": "MIT",
   "scripts": {
-    "build": "npx webpack",
-    "test": "npx standard src"
+    "build": "webpack",
+    "test": "standard --fix src"
   },
   "devDependencies": {
-    "css-loader": "^6.7.0",
-    "style-loader": "^3.3.1",
-    "webpack-cli": "^5.0.1"
+    "css-loader": "^7.1.2",
+    "standard": "^17.1.2",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   },
   "dependencies": {
     "@haiix/seq": "^0.1.1",
     "@haiix/tcomponent": "^0.2.6",
-    "@zip.js/zip.js": "^2.4.12",
-    "monaco-editor-webpack-plugin": "^7.0.1",
-    "typescript": "^5.1.3"
+    "@zip.js/zip.js": "^2.7.57",
+    "monaco-editor-webpack-plugin": "^7.1.0",
+    "typescript": "^5.8.2"
   },
   "standard": {
     "env": [
