--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "author": "haiix",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "test": "standard --fix src"
+    "build": "npm run clean && webpack",
+    "test": "standard --fix src",
+    "clean": "rimraf dist"
   },
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "rimraf": "^6.0.1",
     "standard": "^17.1.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.98.0",
